[package]
name = "power_seek"
version = "0.1.0"
edition = "2021"
description = "A TUI application to monitor power supplies and battery information"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[dependencies]
ratatui = { version = "0.28", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
log = "0.4"
env_logger = "0.11"
battery = "0.7"